Correct the number of main repos
Fixes: cef329a0fdf0f8c240408bb455a495ae2e0f1335

--- a/_includes/manuals/2.0/3.3.1_rpm_packages.md
+++ b/_includes/manuals/2.0/3.3.1_rpm_packages.md
@@ -37,7 +37,7 @@ It's recommended to [configure the Puppet repositories](https://puppet.com/docs/
 
 #### Available repositories
 
-Four main repos are provided at <https://yum.theforeman.org>:
+Three main repos are provided at <https://yum.theforeman.org>:
 
 * `/client` or `/client/VERSION` (e.g. `/client/{{page.version}}`) carries packages relevant to clients. This is optional and Foreman does not require anything installed on clients.
 * `/releases` or `/releases/VERSION` (e.g. `/releases/{{page.version}}`) carries the all releases and updates of Foreman and its dependencies.
