--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -22,16 +22,16 @@ For more information see the [RFC](https://community.theforeman.org/t/drop-requi
 
 Foreman 2.1 introduced EL8 support and Katello 4.0 (on Foreman 2.4) followed.
 While it's currently undecided when EL7 support will be dropped exactly, this is an early notice given the considerable number of EL7 deployments.
-For fresh installations, EL8 should considered the preferred target.
+For fresh installations, it is advisable to install on EL8.
 Existing installations should start thinking about a migration plan.
 
-Note that this is only support to run Foreman and Foreman Proxy themselves on EL7. Managing EL7 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
+Note that this support statement refers to running Foreman and Foreman Smart Proxy themselves on EL7. Managing EL7 hosts remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
 #### Running Foreman on Debian 10
 
 Now that Debian 11 is supported, Debian 10 support is deprecated and will be dropped with Foreman 3.4
 
-Note that this is only support to run Foreman and Foreman Proxy themselves on Debian 10. Managing Debia 10 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
+Note that this support statement refers to running Foreman and Foreman Proxy themselves on Debian 10. Managing Debian 10 hosts remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
 ### Release Notes
 
