--- a/_includes/manuals/nightly/3.2.2_installer_options.md
+++ b/_includes/manuals/nightly/3.2.2_installer_options.md
@@ -592,10 +592,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Defines Apache mod_ssl SSLCertificateFile setting in Foreman vhost conf file.</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--foreman-server-ssl-certs-dir</td>
-        <td>Defines Apache mod_ssl SSLCACertificatePath setting in Foreman vhost conf file.</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--foreman-server-ssl-chain</td>
         <td>Defines Apache mod_ssl SSLCertificateChainFile setting in Foreman vhost conf file.</td>
       </tr>
@@ -658,6 +654,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-telemetry-statsd-protocol</td>
         <td>Statsd protocol one of 'statsd', 'statsite' or 'datadog' - currently only statsd is supported</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-trusted-proxies</td>
+        <td>List of trusted IPs / networks. Default: IPv4 and IPV6 localhost addresses. If overwritten, localhost addresses (127.0.0.1/8, ::1) need to be in trusted_proxies IP list again. More details: https://api.rubyonrails.org/classes/ActionDispatch/RemoteIp.html</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-unattended</td>
@@ -790,6 +790,14 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-dhcp-interface</td>
         <td>DHCP listen interface</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-dhcp-ipxe-bootstrap</td>
+        <td>Enable or disable iPXE bootstrap(discovery) feature</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-dhcp-ipxefilename</td>
+        <td>iPXE DHCP "filename" value, If not specified, it's determined dynamically. When the templates feature is enabled, the template_url is used.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-dhcp-key-name</td>
@@ -1385,7 +1393,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-package-install-options</td>
-        <td>Flags that should be passed to the package manager during installation. Defaults to undef. May be a string or a hash, see Puppet Package resource documentation for the provider matching your package manager</td>
+        <td>Flags that should be passed to the package manager during installation. Defaults to undef. May be a string, an array or a hash, see Puppet Package resource documentation for the provider matching your package manager</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-package-provider</td>
@@ -1402,10 +1410,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--puppet-pluginsource</td>
         <td>URL to retrieve Puppet plugins from during pluginsync</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--puppet-pluginsync</td>
-        <td>Enable pluginsync.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-port</td>
@@ -1556,6 +1560,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Timeout for cached compiled catalogs (10s, 5m, ...)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--puppet-server-environment-vars</td>
+        <td>A hash of environment variables and their values which the puppetserver is allowed to see. To define literal values double quotes should be used: {'MYVAR': '"MYVALUE"'}. Omitting the inner quotes might lead to unexpected results since the HOCON format does not allow characters like $, curly/square brackets or = in unquoted strings. Multi line strings are also allowed as long as they are triple quoted: {'MYVAR': "\"\"\"MY\nMULTI\nLINE\nVALUE\"\"\""} To pass an existing variable use substitutions: {'MYVAR': '${MYVAR}'}.</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--puppet-server-environments-group</td>
         <td>The group owning the environments directory</td>
       </tr>
@@ -1569,7 +1577,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-envs-dir</td>
-        <td>Directory that holds puppet environments</td>
+        <td>List of directories which hold puppet environments</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-envs-target</td>
@@ -1689,7 +1697,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-max-queued-requests</td>
-        <td>The maximum number of requests that may be queued waiting to borrow a JRuby from the pool. (Puppetserver 5.x only) Defaults to 0 (disabled) for Puppetserver >= 5.0</td>
+        <td>The maximum number of requests that may be queued waiting to borrow a JRuby from the pool. Defaults to 0 (disabled).</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-max-requests-per-instance</td>
@@ -1697,7 +1705,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-max-retry-delay</td>
-        <td>Sets the upper limit for the random sleep set as a Retry-After header on 503 responses returned when max-queued-requests is enabled. (Puppetserver 5.x only) Defaults to 1800 for Puppetserver >= 5.0</td>
+        <td>Sets the upper limit for the random sleep set as a Retry-After header on 503 responses returned when max-queued-requests is enabled. Defaults to 1800.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-max-threads</td>
@@ -1733,7 +1741,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-multithreaded</td>
-        <td>Use multithreaded jruby. (Puppetserver >= 6.8 only).  Defaults to false.</td>
+        <td>Use multithreaded jruby. Defaults to false.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-package</td>
@@ -1769,11 +1777,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-puppetserver-experimental</td>
-        <td>For Puppetserver 5, enable the /puppet/experimental route? Defaults to true</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--puppet-server-puppetserver-jruby9k</td>
-        <td>For Puppetserver 5, use JRuby 9k? Defaults to false</td>
+        <td>Enable the /puppet/experimental route? Defaults to true</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-puppetserver-logdir</td>
@@ -1861,7 +1865,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-trusted-external-command</td>
-        <td>The external trusted facts script to use. (Puppet >= 6.11 only).</td>
+        <td>The external trusted facts script to use.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-use-legacy-auth-conf</td>
@@ -2220,24 +2224,12 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Whether to enable trusted hosts and ssl for the dynflow console</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-core-listen</td>
-        <td>Address to listen on for the dynflow core service</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-core-port</td>
-        <td>Port to use for the local dynflow core service</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-database-path</td>
         <td>Path to the SQLite database file, set empty for in-memory sqlite</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-enabled</td>
         <td>Enables/disables the dynflow plugin</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-external-core</td>
-        <td>Forces usage of external/internal Dynflow core</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-listen-on</td>
@@ -2348,10 +2340,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-async-ssh</td>
-        <td>Whether to run remote execution jobs asynchronously.</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-enabled</td>
         <td>Enables/disables the plugin</td>
       </tr>
@@ -2370,6 +2358,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-local-working-dir</td>
         <td>Local working directory on the smart proxy</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-mode</td>
+        <td>Operation Mode of the plugin.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-remote-working-dir</td>
@@ -2438,6 +2430,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-autosign-file</td>
         <td>File to use for salt autosign</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-autosign-key-file</td>
+        <td>File to use for salt autosign via grains</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-enabled</td>
