--- a/_includes/manuals/3.2/1.2_release_notes.md
+++ b/_includes/manuals/3.2/1.2_release_notes.md
@@ -31,7 +31,225 @@ Now that Debian 11 is supported, Debian 10 support is deprecated and will be dro
 
 Note that this support statement refers to running Foreman and Foreman Proxy themselves on Debian 10. Managing Debian 10 hosts remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
-### Release Notes
+### Release notes for 3.2.0
+#### Foreman
+* Helper logging method how_long ([#34091](https://projects.theforeman.org/issues/34091))
+
+#### Foreman - API
+* Change example for --order ([#34381](https://projects.theforeman.org/issues/34381))
+
+#### Foreman - Audit Log
+* Recent audits card in new host page is missing username ([#34223](https://projects.theforeman.org/issues/34223))
+
+#### Foreman - Authentication
+* Support ADFS-style JWTs ([#33055](https://projects.theforeman.org/issues/33055))
+
+#### Foreman - Compute resources - VMware
+* Unable to create compute profile for specific vmware compute resource ([#30550](https://projects.theforeman.org/issues/30550))
+* Cannot view Compute-Profiles from a specific Compute-Resource ([#28155](https://projects.theforeman.org/issues/28155))
+
+#### Foreman - DB migrations
+* Clean up old data migrations from Foreman &lt; 2.0 ([#33909](https://projects.theforeman.org/issues/33909))
+
+#### Foreman - Development tools
+* API Development Guidelines ([#33865](https://projects.theforeman.org/issues/33865))
+
+#### Foreman - Facts
+* Identifying CentOS Stream as CentOS_Stream breaks in upgrades ([#34409](https://projects.theforeman.org/issues/34409))
+* Fix IPv6 support in rhsm fact facter ([#34330](https://projects.theforeman.org/issues/34330))
+* Add Oracle hypervisor virtual interface naming pattern to the ignore list ([#34315](https://projects.theforeman.org/issues/34315))
+* fact_values api performance issues when loading a large number of facts ([#34160](https://projects.theforeman.org/issues/34160))
+* remove deprecated Host#import_facts method ([#34063](https://projects.theforeman.org/issues/34063))
+* New OS created due to facts mismatch for operatingsystem for RHSM, Puppet and Ansible ([#33981](https://projects.theforeman.org/issues/33981))
+* Support ? for setting wildcards ([#33775](https://projects.theforeman.org/issues/33775))
+* Cloned viewer role cannot view facts ([#33656](https://projects.theforeman.org/issues/33656))
+* Support CentOS Stream 8 detection based on all facts ([#33470](https://projects.theforeman.org/issues/33470))
+* Use modern Facter 3 facts ([#27906](https://projects.theforeman.org/issues/27906))
+
+#### Foreman - Host creation
+* Host form redirect does not work for unmanaged host ([#34371](https://projects.theforeman.org/issues/34371))
+* Host form redirect relies on the primary interface being the first interface ([#34300](https://projects.theforeman.org/issues/34300))
+* Remove workaround for root_password encoding ([#34289](https://projects.theforeman.org/issues/34289))
+
+#### Foreman - Host groups
+* Reprovisioning a host using new HostGroup does not inherit root password from the new HostGroup ([#33811](https://projects.theforeman.org/issues/33811))
+
+#### Foreman - Host registration
+* Insights snippet - remove connection test ([#34340](https://projects.theforeman.org/issues/34340))
+* Missing example for "Install packages" field ([#34252](https://projects.theforeman.org/issues/34252))
+* Grammatical errors with Insecure help text at Host Registration ([#34250](https://projects.theforeman.org/issues/34250))
+* Host facts are not uploaded to Foreman when host is registered with global registration ([#34249](https://projects.theforeman.org/issues/34249))
+* Fix bool params in global registration template ([#34206](https://projects.theforeman.org/issues/34206))
+* Preview of registration and host_init_config templates ([#34198](https://projects.theforeman.org/issues/34198))
+* Fix name & path to OS host_init_config template ([#33979](https://projects.theforeman.org/issues/33979))
+
+#### Foreman - Internationalization
+* Strings with enter don't get extracted for translation ([#34058](https://projects.theforeman.org/issues/34058))
+* Drop translations for languages with low translation rate ([#33920](https://projects.theforeman.org/issues/33920))
+
+#### Foreman - JavaScript stack
+* Use PF4 pagination as default ([#34133](https://projects.theforeman.org/issues/34133))
+* use FormattedMessage instead of dangerouslySetInnerHTML  ([#33946](https://projects.theforeman.org/issues/33946))
+* Allow 2 search with bookmark in one page  ([#33736](https://projects.theforeman.org/issues/33736))
+
+#### Foreman - Monitoring
+* Report disallowed metric labels as "other" ([#34122](https://projects.theforeman.org/issues/34122))
+* forget_status doesn't update the global host's state ([#33882](https://projects.theforeman.org/issues/33882))
+
+#### Foreman - Network
+* Add \`ip_include?\` method to IPAM::Base that uses \`IPAddr#include?\` method ([#34280](https://projects.theforeman.org/issues/34280))
+
+#### Foreman - Packaging
+* Pin psych &lt; 4 ([#34212](https://projects.theforeman.org/issues/34212))
+
+#### Foreman - Plugin integration
+* GraphQL types touch database in migration rakes ([#34366](https://projects.theforeman.org/issues/34366))
+* Allow Site manager role to be extended from plugins ([#34351](https://projects.theforeman.org/issues/34351))
+* Allow specific permissions to be excluded from being added to default roles ([#34329](https://projects.theforeman.org/issues/34329))
+* Add medium_providers_registry instance method ([#34002](https://projects.theforeman.org/issues/34002))
+* clean up deprecated methods for foreman 3.2 ([#33996](https://projects.theforeman.org/issues/33996))
+* Enable Salt Autosign via Grains for Provisioning Template ([#32919](https://projects.theforeman.org/issues/32919))
+
+#### Foreman - Rails
+* Require code from lib folder ([#34165](https://projects.theforeman.org/issues/34165))
+* Audit human class name is translated twice ([#34151](https://projects.theforeman.org/issues/34151))
+* Move services from lib/foreman to app/services/foreman ([#34146](https://projects.theforeman.org/issues/34146))
+* Move Foreman::Renderer from lib/ to app/services ([#34139](https://projects.theforeman.org/issues/34139))
+* Autoload ProxyAPI files from /app/services ([#34138](https://projects.theforeman.org/issues/34138))
+* Add initialization method to RbacRegistry ([#34010](https://projects.theforeman.org/issues/34010))
+* Add plugin after_initialize hook ([#34009](https://projects.theforeman.org/issues/34009))
+* Plugin and its rbac_support are using Role and Permission models too early ([#34006](https://projects.theforeman.org/issues/34006))
+* drop truncate_bytes method ([#33992](https://projects.theforeman.org/issues/33992))
+* Require /lib dependencies in initializers/foreman.rb  ([#33991](https://projects.theforeman.org/issues/33991))
+* Delay Initialization of ApiPie that depends on Model classes ([#33989](https://projects.theforeman.org/issues/33989))
+* Hostmix to use class_methods ([#33987](https://projects.theforeman.org/issues/33987))
+* Move Callback classes to separate files ([#33986](https://projects.theforeman.org/issues/33986))
+* Move identification methods to ApplicationRecord ([#33985](https://projects.theforeman.org/issues/33985))
+* Remove custom update methods ([#33984](https://projects.theforeman.org/issues/33984))
+* Fix loading of Foreman::Telemetry in initializers ([#33968](https://projects.theforeman.org/issues/33968))
+* Move basic ActiveRecord::Base custom extensions to ApplicationRecord ([#33967](https://projects.theforeman.org/issues/33967))
+* Load Menu::Loader in 'to_prepare' ([#33964](https://projects.theforeman.org/issues/33964))
+* Require Foreman::Util in initializers ([#33957](https://projects.theforeman.org/issues/33957))
+* Fix early load of ForemanInternal in initializer ([#33950](https://projects.theforeman.org/issues/33950))
+* Fix early load of plugin fact parsers ([#33949](https://projects.theforeman.org/issues/33949))
+* Postpone setting validations to to_prepare ([#33892](https://projects.theforeman.org/issues/33892))
+* Require foreman/gettext directly ([#33890](https://projects.theforeman.org/issues/33890))
+* move away from record_tag_helper ([#28571](https://projects.theforeman.org/issues/28571))
+* Do not use string interpolation when composing SQL queries. ([#23300](https://projects.theforeman.org/issues/23300))
+
+#### Foreman - Rake tasks
+* Remove legacy models:consolidate task ([#34117](https://projects.theforeman.org/issues/34117))
+
+#### Foreman - Reporting
+* Prepare Foreman core for Host Reports migration ([#34360](https://projects.theforeman.org/issues/34360))
+* Importing puppet report via the API does not authorize ([#34026](https://projects.theforeman.org/issues/34026))
+* Report Template "Applicable Errata" fails for large numbers of Content Hosts ([#29970](https://projects.theforeman.org/issues/29970))
+
+#### Foreman - Search
+* Make ordering by id possible for more models ([#33842](https://projects.theforeman.org/issues/33842))
+
+#### Foreman - Security
+* The login page exposes version of the foreman ([#33417](https://projects.theforeman.org/issues/33417))
+
+#### Foreman - Settings
+* The Setting defaults are never updated
+ ([#34323](https://projects.theforeman.org/issues/34323))
+* Speed up settings index page ([#33935](https://projects.theforeman.org/issues/33935))
+* drop fix_db_cache setting ([#33906](https://projects.theforeman.org/issues/33906))
+* Deprecate other than DSL setting definitions ([#33781](https://projects.theforeman.org/issues/33781))
+
+#### Foreman - Smart Proxy
+* Drop require_ssl_smart_proxies setting ([#34236](https://projects.theforeman.org/issues/34236))
+* Do not warn on HTTP connection from Smart proxy ([#34234](https://projects.theforeman.org/issues/34234))
+
+#### Foreman - TFTP
+* Misspelled word in tooltip "Toggel" instead of "Toggle"
+ ([#34062](https://projects.theforeman.org/issues/34062))
+
+#### Foreman - Templates
+* Update examples for truthy? and falsy? macros ([#34365](https://projects.theforeman.org/issues/34365))
+* Associate redhat templates with CentOS_Stream OS name ([#34302](https://projects.theforeman.org/issues/34302))
+* upgrade fails during db:seed with ActiveRecord::RecordNotDestroyed: Failed to destroy the record ([#34299](https://projects.theforeman.org/issues/34299))
+* pxe_kernel_options are not handled in Preseed PXE templates ([#34292](https://projects.theforeman.org/issues/34292))
+* More Anaconda kernel boot parameters without 'inst.' prefix template changes ([#34265](https://projects.theforeman.org/issues/34265))
+* Puppet aio detection is broken in Foreman 3.1 provisioning templates, PR#8899 is full of typos ([#34214](https://projects.theforeman.org/issues/34214))
+* is_true? & is_false? template helpers ([#34213](https://projects.theforeman.org/issues/34213))
+* Rename enable-puppetlabs-puppetX-repo to enable-puppetofficial-puppetX-repo ([#34088](https://projects.theforeman.org/issues/34088))
+* Rename Job Invocation template ([#34068](https://projects.theforeman.org/issues/34068))
+* Include Tower extra vars feature when calling the API callback ([#33942](https://projects.theforeman.org/issues/33942))
+* Add current date macro ([#33907](https://projects.theforeman.org/issues/33907))
+* include repo support for puppet 7 in provisioning snippets ([#32602](https://projects.theforeman.org/issues/32602))
+
+#### Foreman - Tests
+* Improve api/settings_controller test coverage ([#34349](https://projects.theforeman.org/issues/34349))
+* ParameterFilterTest accidentally modifies Mocha::Mock ([#34064](https://projects.theforeman.org/issues/34064))
+* Update minitest plugin for junit-XML generation ([#26968](https://projects.theforeman.org/issues/26968))
+* Update minitest to &gt; 5.10 ([#22110](https://projects.theforeman.org/issues/22110))
+
+#### Foreman - Unattended installations
+* Ruby warning: URI.escape is obsolete after the host is provisioned ([#33801](https://projects.theforeman.org/issues/33801))
+* Add ct/fcct transpiler macro support ([#31027](https://projects.theforeman.org/issues/31027))
+
+#### Foreman - Users, Roles and Permissions
+* b"'Mail enabled' setting cannot be switched with the hammer user command." ([#34123](https://projects.theforeman.org/issues/34123))
+
+#### Foreman - Web Interface
+* default variant prop is missing from pagination component ([#34410](https://projects.theforeman.org/issues/34410))
+* remove experimental banner in new host page ([#34293](https://projects.theforeman.org/issues/34293))
+* Ignore URL query params when setting active tab ([#34271](https://projects.theforeman.org/issues/34271))
+* Add slot for rex dropdown in new host page ([#34259](https://projects.theforeman.org/issues/34259))
+* New host details link should be removed from hosts index page ([#34254](https://projects.theforeman.org/issues/34254))
+* use PF4 pagination ([#34185](https://projects.theforeman.org/issues/34185))
+* Opt in new host page by default ([#34166](https://projects.theforeman.org/issues/34166))
+* Core cards in overview tab should be arrangeable ([#34142](https://projects.theforeman.org/issues/34142))
+* Hosts UI - UX Review - Spacing ([#34129](https://projects.theforeman.org/issues/34129))
+* New Host detail page - small screen can't see build modal ([#33955](https://projects.theforeman.org/issues/33955))
+* new host page lacks empty state ([#33862](https://projects.theforeman.org/issues/33862))
+* delete unused  react_pagination_props ([#33681](https://projects.theforeman.org/issues/33681))
+* Host Detail Graphs VERY slow to load after upgrade to 3.0.0-rc1 ([#33310](https://projects.theforeman.org/issues/33310))
+
+#### Hammer
+
+* Fix fr translation ([PR #358](https://github.com/theforeman/hammer-cli/pull/358)), [#34204](http://projects.theforeman.org/issues/34204)
+* Add missing_args_error_result test helper ([PR #357](https://github.com/theforeman/hammer-cli/pull/357))
+* Allow explicit strings in key=value options ([PR #356](https://github.com/theforeman/hammer-cli/pull/356)), [#34079](http://projects.theforeman.org/issues/34079)
+* Domain update doesn't reset dns implicitly ([PR #591](https://github.com/theforeman/hammer-cli-foreman/pull/591)), [#34177](http://projects.theforeman.org/issues/34177)
+* Send filter's tax params only when required ([PR #592](https://github.com/theforeman/hammer-cli-foreman/pull/592)), [#34199](http://projects.theforeman.org/issues/34199)
+* Add boot_order to compute-attribute ([PR #588](https://github.com/theforeman/hammer-cli-foreman/pull/588)), [#33910](http://projects.theforeman.org/issues/33910)
+* Add mail_enabled to user list/info command ([PR #589](https://github.com/theforeman/hammer-cli-foreman/pull/589)), [#34180](http://projects.theforeman.org/issues/34180)
+* Add token to host info command ([PR #586](https://github.com/theforeman/hammer-cli-foreman/pull/586)), [#34120](http://projects.theforeman.org/issues/34120)
+
+#### Installer
+* katello-rhsm-consumer script subscription-manager version detection depends on subscription-manager rpm being installed
+ ([#34406](https://projects.theforeman.org/issues/34406))
+* installer does not restart foreman.service when changing puma configuration ([#33973](https://projects.theforeman.org/issues/33973))
+* Add iPXE bootstrap to the dhcpd.conf ([#33549](https://projects.theforeman.org/issues/33549))
+
+#### Installer - Foreman modules
+* enable redis cache for pulp content server by default ([#34325](https://projects.theforeman.org/issues/34325))
+* [Custom Certs] - Failed to install the custom certs on Katello 4.3, works on 4.1 ([#34317](https://projects.theforeman.org/issues/34317))
+* Seed may not be triggered after migration ([#34308](https://projects.theforeman.org/issues/34308))
+* support KEEP_CHANGELOG_LIMIT option with pulpcore ([#34298](https://projects.theforeman.org/issues/34298))
+* Candlepin errors when using an encrypted key generated with genpkey or on a FIPS enabled machine ([#34189](https://projects.theforeman.org/issues/34189))
+* Katello 4.2 to 4.3 upgrade doesn't trigger apipie:cache:index, breaking some new hammer commands ([#34161](https://projects.theforeman.org/issues/34161))
+* foreman-proxy-content-enable-ostree true doesn't refresh the proxy features, leading to ostree being unavailable ([#34154](https://projects.theforeman.org/issues/34154))
+* Puppet module puppet-foreman missing parameter for :trusted_proxies: ([#34089](https://projects.theforeman.org/issues/34089))
+* Set permissions on Candlepin config files to be owned by root:tomcat ([#30366](https://projects.theforeman.org/issues/30366))
+
+#### Smart Proxy
+* Bump version to 3.2.0-develop ([#33915](https://projects.theforeman.org/issues/33915))
+
+#### Smart Proxy - DHCP
+* Improve expired lease parser tests ([#33772](https://projects.theforeman.org/issues/33772))
+
+#### Smart Proxy - DNS
+* Windows DNSCMD no implicit conversion of nil into String ([#34226](https://projects.theforeman.org/issues/34226))
+
+#### Smart Proxy - Plugins
+* Add an enum plugin validator ([#34164](https://projects.theforeman.org/issues/34164))
+* validate_presence and validate_readable with predicate broken ([#34141](https://projects.theforeman.org/issues/34141))
+
+*A full list of changes in 3.2.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1512)*
 
 ### Contributors
 
