--- a/_includes/manuals/1.24/5.2.9_cr_vmware.md
+++ b/_includes/manuals/1.24/5.2.9_cr_vmware.md
@@ -17,7 +17,7 @@ The same process can also be done using a user_data template. To configure image
 * Browse then to the image to be used for provisioning, and ensure that "User Data" is checked
 * Associate a user_data template to the host. The template will use cloud-init syntax.
 * Note that the images dont need cloudinit installed, as the cloudinit is converted under the hood to a CustomisationSpec object that VMware can process
-* To get status "Installed" in the UI, the provisioned host have to run a finish script. There are templates like "built" located in "Provision Templates", giving a example how to do this.
+* In order to inform foreman about successful build and get the host to "Installed" state in the UI, the provisioned host have to run a finish script. You can find exaplmes in "Provisioning templates" how to do this. The basic example is "built" template.
 
 #### Console access
 
