update browsers compatibility
support the following:
* Google Chrome - latest version
* Microsoft Edge - latest version
* Apple Safari - latest version
* Mozilla Firefox - latest version
* Mozilla Firefox Extended Support Release (ESR) - latest version

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -8,6 +8,14 @@ This section will be updated prior to the next release.
 
 ### Deprecations
 
+We've updated our browsers compatibility to support the following:
+
+* Google Chrome - latest version
+* Microsoft Edge - latest version
+* Apple Safari - latest version
+* Mozilla Firefox - latest version
+* Mozilla Firefox Extended Support Release (ESR) - latest version
+
 ### Release Notes
 
 ### Contributors
