--- a/_includes/manuals/nightly/3.1.4_browser_compatibility.md
+++ b/_includes/manuals/nightly/3.1.4_browser_compatibility.md
@@ -3,9 +3,10 @@ Using the most recent version of a major browser is highly recommended, as Forem
 
 The recommended requirements are as follows for major browsers:
 
-* Google Chrome 54 or higher
-* Microsoft Edge
-* Microsoft Internet Explorer 10 or higher
-* Mozilla Firefox 49 or higher
+* Google Chrome - latest version
+* Microsoft Edge - latest version
+* Apple Safari - latest version
+* Mozilla Firefox - latest version
+* Mozilla Firefox Extended Support Release (ESR) - latest version
 
 Other browsers may work unpredictably.
