--- a/_includes/manuals/3.1/1.2_release_notes.md
+++ b/_includes/manuals/3.1/1.2_release_notes.md
@@ -61,6 +61,38 @@ Existing installations should start thinking about a migration plan.
 
 Note that this support statement refers to running Foreman and Foreman Proxy themselves on EL7. Managing EL7 hosts remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
+### Release notes for 3.1.2
+#### Foreman - API
+* Change example for --order ([#34381](https://projects.theforeman.org/issues/34381))
+
+#### Foreman - Facts
+* Fix IPv6 support in rhsm fact facter ([#34330](https://projects.theforeman.org/issues/34330))
+
+#### Foreman - Host creation
+* Host form redirect does not work for unmanaged host ([#34371](https://projects.theforeman.org/issues/34371))
+
+#### Foreman - Organizations and Locations
+* Organization context fails to change in web UI ([#34416](https://projects.theforeman.org/issues/34416))
+
+#### Foreman - Plugin integration
+* Facets do not allow emptying their relations through mass assignment ([#34375](https://projects.theforeman.org/issues/34375))
+* GraphQL types touch database in migration rakes ([#34366](https://projects.theforeman.org/issues/34366))
+* Allow Site manager role to be extended from plugins ([#34351](https://projects.theforeman.org/issues/34351))
+* Allow specific permissions to be excluded from being added to default roles ([#34329](https://projects.theforeman.org/issues/34329))
+
+#### Installer - Foreman modules
+* Dynflow doesn't properly come back if the DB is unavailable for a brief period of time ([#34394](https://projects.theforeman.org/issues/34394))
+* Create the Pulp group as system group ([#34379](https://projects.theforeman.org/issues/34379))
+* Candlepin errors when using an encrypted key generated with genpkey or on a FIPS enabled machine ([#34189](https://projects.theforeman.org/issues/34189))
+
+#### Installer - foreman-installer script
+* run foreman-rake upgrade:run only conditionally ([#34440](https://projects.theforeman.org/issues/34440))
+
+#### Smart Proxy - DHCP
+* DHCP error with wrong number of arguments for validate_supported_address ([#34359](https://projects.theforeman.org/issues/34359))
+
+*A full list of changes in 3.1.2 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1547)*
+
 ### Release notes for 3.1.1
 #### Foreman - Audit Log
 * Recent audits card in new host page is missing username \- [#34223](https://projects.theforeman.org/issues/34223)
