Update supported Puppet versions

--- a/_includes/manuals/nightly/3.1.3_puppet_versions.md
+++ b/_includes/manuals/nightly/3.1.3_puppet_versions.md
@@ -21,12 +21,12 @@ Foreman integrates with Puppet and Facter in a few places, but generally using a
   </tr>
   <tr>
     <td>5.x</td>
-    <td>Supported</td>
-    <td>Untested</td>
-    <td>Supported</td>
+    <td>Not supported</td>
+    <td>Not supported</td>
+    <td>Deprecated</td>
   </tr>
   <tr>
-    <td>6.x</td>
+    <td>6.x - 7.x</td>
     <td>Supported</td>
     <td>Untested</td>
     <td>Supported</td>
@@ -43,7 +43,7 @@ Puppetserver is the application for serving Puppet agents used by default since 
 
 #### Facter compatibility
 
-Foreman is known to be compatible with all Facter 1.x to 3.x releases.
+Foreman is known to be compatible with all Facter 2.x to 4.x releases.
 
 #### Puppet Enterprise compatibility
 
