Use modularity on EL8
A foreman module is now used on EL8 which enables the correct modules,
including Ruby. For this the order needs to be changed: the release repo
must be present prior to enabling the module.

--- a/_includes/manuals/nightly/2.1_quickstart_installation.md
+++ b/_includes/manuals/nightly/2.1_quickstart_installation.md
@@ -73,7 +73,7 @@ sudo yum -y install https://yum.puppet.com/puppet7-release-el-7.noarch.rpm
   </p>
 
 {% highlight bash %}
-sudo yum -y install https://yum.puppet.com/puppet7-release-el-8.noarch.rpm
+sudo dnf -y install https://yum.puppet.com/puppet7-release-el-8.noarch.rpm
 {% endhighlight %}
 </div>
 
@@ -109,19 +109,18 @@ sudo yum -y install https://mirror.centos.org/centos/7/extras/x86_64/Packages/ce
 </div>
 
 <div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
-  <p>Enable the Ruby 2.7 module:</p>
+  <p>Enable the Foreman repositories:</p>
 
 {% highlight bash %}
-sudo dnf module reset ruby
-sudo dnf module enable ruby:2.7
+sudo dnf -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
 {% endhighlight %}
 </div>
 
 <div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
-  <p>Enable the Foreman repositories:</p>
+  <p>Enable the Foreman module:</p>
 
 {% highlight bash %}
-sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
+sudo dnf module enable foreman:el8
 {% endhighlight %}
 </div>
 
