--- a/_includes/manuals/nightly/3.6_upgrade.md
+++ b/_includes/manuals/nightly/3.6_upgrade.md
@@ -122,11 +122,16 @@ Clean up the yum metadata cache:
 dnf clean metadata
 {% endhighlight %}
 
-Enable the Ruby 2.7 module:
+If the Ruby 2.5 module was previously enabled, it must be reset:
 
 {% highlight bash %}
 dnf module reset ruby
-dnf module enable ruby:2.7
+{% endhighlight %}
+
+Enable the Foreman module:
+
+{% highlight bash %}
+dnf module enable foreman:el8
 {% endhighlight %}
 
 Next upgrade all Foreman packages:
