--- a/_includes/manuals/3.2/1.2_release_notes.md
+++ b/_includes/manuals/3.2/1.2_release_notes.md
@@ -45,6 +45,7 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 * Support ADFS-style JWTs ([#33055](https://projects.theforeman.org/issues/33055))
 
 #### Foreman - Compute resources - VMware
+* Latest Hardware version for VMware vSphere 7.0 U2 and U3 is not available ([#34499](https://projects.theforeman.org/issues/34499))
 * Unable to create compute profile for specific vmware compute resource ([#30550](https://projects.theforeman.org/issues/30550))
 * Cannot view Compute-Profiles from a specific Compute-Resource ([#28155](https://projects.theforeman.org/issues/28155))
 
@@ -55,6 +56,7 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 * API Development Guidelines ([#33865](https://projects.theforeman.org/issues/33865))
 
 #### Foreman - Facts
+* Normalize fact parsers to use CentOS instead of centos ([#34450](https://projects.theforeman.org/issues/34450))
 * Identifying CentOS Stream as CentOS_Stream breaks in upgrades ([#34409](https://projects.theforeman.org/issues/34409))
 * Fix IPv6 support in rhsm fact facter ([#34330](https://projects.theforeman.org/issues/34330))
 * Add Oracle hypervisor virtual interface naming pattern to the ignore list ([#34315](https://projects.theforeman.org/issues/34315))
@@ -70,6 +72,7 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 * Host form redirect does not work for unmanaged host ([#34371](https://projects.theforeman.org/issues/34371))
 * Host form redirect relies on the primary interface being the first interface ([#34300](https://projects.theforeman.org/issues/34300))
 * Remove workaround for root_password encoding ([#34289](https://projects.theforeman.org/issues/34289))
+* Ubuntu Autoinstall support ([#32632](https://projects.theforeman.org/issues/32632))
 
 #### Foreman - Host groups
 * Reprovisioning a host using new HostGroup does not inherit root password from the new HostGroup ([#33811](https://projects.theforeman.org/issues/33811))
@@ -99,10 +102,14 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 #### Foreman - Network
 * Add \`ip_include?\` method to IPAM::Base that uses \`IPAddr#include?\` method ([#34280](https://projects.theforeman.org/issues/34280))
 
+#### Foreman - Organizations and Locations
+* Organization context fails to change in web UI ([#34416](https://projects.theforeman.org/issues/34416))
+
 #### Foreman - Packaging
 * Pin psych &lt; 4 ([#34212](https://projects.theforeman.org/issues/34212))
 
 #### Foreman - Plugin integration
+* Facets do not allow emptying their relations through mass assignment ([#34375](https://projects.theforeman.org/issues/34375))
 * GraphQL types touch database in migration rakes ([#34366](https://projects.theforeman.org/issues/34366))
 * Allow Site manager role to be extended from plugins ([#34351](https://projects.theforeman.org/issues/34351))
 * Allow specific permissions to be excluded from being added to default roles ([#34329](https://projects.theforeman.org/issues/34329))
@@ -191,9 +198,11 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 * Add ct/fcct transpiler macro support ([#31027](https://projects.theforeman.org/issues/31027))
 
 #### Foreman - Users, Roles and Permissions
+* Infer of permission name for isolated namespace controllers doesnt work ([#34506](https://projects.theforeman.org/issues/34506))
 * b"'Mail enabled' setting cannot be switched with the hammer user command." ([#34123](https://projects.theforeman.org/issues/34123))
 
 #### Foreman - Web Interface
+* Add pagelet mountpoints for hosts list table ([#34543](https://projects.theforeman.org/issues/34543))
 * default variant prop is missing from pagination component ([#34410](https://projects.theforeman.org/issues/34410))
 * remove experimental banner in new host page ([#34293](https://projects.theforeman.org/issues/34293))
 * Ignore URL query params when setting active tab ([#34271](https://projects.theforeman.org/issues/34271))
@@ -204,6 +213,7 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 * Core cards in overview tab should be arrangeable ([#34142](https://projects.theforeman.org/issues/34142))
 * Hosts UI - UX Review - Spacing ([#34129](https://projects.theforeman.org/issues/34129))
 * New Host detail page - small screen can't see build modal ([#33955](https://projects.theforeman.org/issues/33955))
+* New host detail page shows IP address over multiple lines ([#33948](https://projects.theforeman.org/issues/33948))
 * new host page lacks empty state ([#33862](https://projects.theforeman.org/issues/33862))
 * delete unused  react_pagination_props ([#33681](https://projects.theforeman.org/issues/33681))
 * Host Detail Graphs VERY slow to load after upgrade to 3.0.0-rc1 ([#33310](https://projects.theforeman.org/issues/33310))
@@ -226,6 +236,8 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 * Add iPXE bootstrap to the dhcpd.conf ([#33549](https://projects.theforeman.org/issues/33549))
 
 #### Installer - Foreman modules
+* Dynflow doesn't properly come back if the DB is unavailable for a brief period of time ([#34394](https://projects.theforeman.org/issues/34394))
+* Create the Pulp group as system group ([#34379](https://projects.theforeman.org/issues/34379))
 * enable redis cache for pulp content server by default ([#34325](https://projects.theforeman.org/issues/34325))
 * [Custom Certs] - Failed to install the custom certs on Katello 4.3, works on 4.1 ([#34317](https://projects.theforeman.org/issues/34317))
 * Seed may not be triggered after migration ([#34308](https://projects.theforeman.org/issues/34308))
@@ -236,10 +248,14 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 * Puppet module puppet-foreman missing parameter for :trusted_proxies: ([#34089](https://projects.theforeman.org/issues/34089))
 * Set permissions on Candlepin config files to be owned by root:tomcat ([#30366](https://projects.theforeman.org/issues/30366))
 
+#### Installer - foreman-installer script
+* run foreman-rake upgrade:run only conditionally ([#34440](https://projects.theforeman.org/issues/34440))
+
 #### Smart Proxy
 * Bump version to 3.2.0-develop ([#33915](https://projects.theforeman.org/issues/33915))
 
 #### Smart Proxy - DHCP
+* DHCP error with wrong number of arguments for validate_supported_address ([#34359](https://projects.theforeman.org/issues/34359))
 * Improve expired lease parser tests ([#33772](https://projects.theforeman.org/issues/33772))
 
 #### Smart Proxy - DNS
