Update release notes - Host Reports
Signed-off-by: Lukas Zapletal <lzap+git@redhat.com>

--- a/_includes/manuals/3.2/1.2_release_notes.md
+++ b/_includes/manuals/3.2/1.2_release_notes.md
@@ -6,6 +6,12 @@
 
 It is now possible to run Foreman on Debian 11. Users are encouraged to upgrade.
 
+#### Host reports (preview)
+
+Configuration Reports are now moving to Host Reports, completely new format of storing configuration reports in a more efficient way. Our measurements show that reporting is now 20 times faster while taking 50% less storage in PostgreSQL database. Host Reports are stored in JSON format and currently supported configuration reports are Puppet and Ansible. Each report has three counters which represent amount of resources (or tasks) that were changed, unchanged or failed. On top of that, each report can have report "keywords" which are searchable. To filter out puppet reports witch failure in particular resource, use "keyword = PuppetFailed:File[/path/that/does/not/exist/causes/failures]". Searching is intivutive as the search box supports query completion.
+
+Host Reports are implemented in separate plugins called Foreman Host Reports and Smart Proxy Reports. See upgrade warnings below for migration instructions.
+
 ### Upgrade warnings
 
 #### `require_ssl_smart_proxies` setting dropped
@@ -13,6 +19,12 @@ It is now possible to run Foreman on Debian 11. Users are encouraged to upgrade.
 The `require_ssl_smart_proxies` setting has been dropped and Foreman now behaves as if the value was true (the default). This means it's no longer possible to use reverse DNS instead of client certificates over HTTPS connections. Upgrading users should ensure a valid Public Key Infrastructure (PKI) exists.
 
 For more information see the [RFC](https://community.theforeman.org/t/drop-require-ssl-and-require-ssl-smart-proxies-settings/26772) and [PR](https://github.com/theforeman/foreman/pull/9021).
+
+#### Migrating to Host Reports (preview)
+
+The way Foreman handles configuration management reports is changing, they are now stored in more efficient way. If you upgraded to 3.2 and noticed there is a warning when you visit Configuration Reports page, you need to reconfigure your Ansible and Puppet callback to send reports to the new API. The old API and Configuration Reports screen will continue working in 3.2 normally, but it is planned to be removed in 3.3 so we recommend to migrate early.
+
+For step-by-step instructions see the [Migrating Reports to the new format in Foreman 3.2](https://community.theforeman.org/t/migrating-reports-to-the-new-format-in-foreman-3-2/25846) community post.
 
 ### Deprecations
 
@@ -30,6 +42,10 @@ Note that this support statement refers to running Foreman and Foreman Smart Pro
 Now that Debian 11 is supported, Debian 10 support is deprecated and will be dropped with Foreman 3.4
 
 Note that this support statement refers to running Foreman and Foreman Proxy themselves on Debian 10. Managing Debian 10 hosts remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
+
+#### Configuration Reports
+
+The Configuration Reports and the API endpoints are deprecated and will be removed in future Foreman versions. Follow the Migrating to Host Reports in the Upgrade warning section to migrate to the new format and update Smart Proxy configuration for Puppet and Ansible to send reports to the new endpoints.
 
 ### Release notes for 3.2.0
 #### Foreman
