Updating docs to inform users not to enable EPEL8 repo as it will cause dependncy issues with foreman

--- a/_includes/manuals/3.1/3.1.1_supported_platforms.md
+++ b/_includes/manuals/3.1/3.1.1_supported_platforms.md
@@ -18,7 +18,9 @@ The following operating systems are supported by the installer, have packages an
   * Architectures: x86_64 only
 * CentOS 8 Stream
   * Architectures: x86_64 only
-  * **Note:** The RPM packages are built on CentOS Linux 8, but tested to work also on CentOS 8 Stream
+  * **Note:**
+    - The RPM packages are built on CentOS Linux 8, but tested to work also on CentOS 8 Stream
+    - EPEL 8 is incompatible, enabling will cause package dependency issue.
 * Ubuntu 20.04 (Bionic)
   * Architectures: amd64
 * Debian 10 (Buster)
