--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -10,7 +10,7 @@ This section will be updated prior to the next release.
 
 Running Foreman with setting `unattended: false` is dropped.
 Every Foreman instance is now effectively running with this setting on.
-For more details and discussion read https://community.theforeman.org/t/rfc-remove-unattended-setting/10035.
+For more details and discussion read [the RFC](https://community.theforeman.org/t/rfc-remove-unattended-setting/10035).
 
 ### Deprecations
 
