Drop unattended setting

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -6,6 +6,12 @@ This section will be updated prior to the next release.
 
 ### Upgrade warnings
 
+#### Disabling unattended mode dropped
+
+Running Foreman with setting `unattended: false` is dropped.
+Every Foreman instance is now effectively running with this setting on.
+For more details and discussion read [the RFC](https://community.theforeman.org/t/rfc-remove-unattended-setting/10035).
+
 ### Deprecations
 
 We've updated our browsers compatibility to support the following:
