--- a/_includes/manuals/3.2/1.2_release_notes.md
+++ b/_includes/manuals/3.2/1.2_release_notes.md
@@ -33,6 +33,7 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 
 ### Release notes for 3.2.0
 #### Foreman
+* Add Safemode jail definition for ActiveSupport::TimeWithZone ([#34571](https://projects.theforeman.org/issues/34571))
 * Helper logging method how_long ([#34091](https://projects.theforeman.org/issues/34091))
 
 #### Foreman - API
@@ -46,6 +47,7 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 
 #### Foreman - Compute resources - VMware
 * Latest Hardware version for VMware vSphere 7.0 U2 and U3 is not available ([#34499](https://projects.theforeman.org/issues/34499))
+* CentOS9 and RHEL9 Guest OS are missing  ([#34498](https://projects.theforeman.org/issues/34498))
 * Unable to create compute profile for specific vmware compute resource ([#30550](https://projects.theforeman.org/issues/30550))
 * Cannot view Compute-Profiles from a specific Compute-Resource ([#28155](https://projects.theforeman.org/issues/28155))
 
@@ -89,6 +91,9 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 #### Foreman - Internationalization
 * Strings with enter don't get extracted for translation ([#34058](https://projects.theforeman.org/issues/34058))
 * Drop translations for languages with low translation rate ([#33920](https://projects.theforeman.org/issues/33920))
+
+#### Foreman - Inventory
+* Submit button on host form redirects to invalid page ([#34572](https://projects.theforeman.org/issues/34572))
 
 #### Foreman - JavaScript stack
 * Use PF4 pagination as default ([#34133](https://projects.theforeman.org/issues/34133))
@@ -148,7 +153,6 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 * Remove legacy models:consolidate task ([#34117](https://projects.theforeman.org/issues/34117))
 
 #### Foreman - Reporting
-* Prepare Foreman core for Host Reports migration ([#34360](https://projects.theforeman.org/issues/34360))
 * Importing puppet report via the API does not authorize ([#34026](https://projects.theforeman.org/issues/34026))
 * Report Template "Applicable Errata" fails for large numbers of Content Hosts ([#29970](https://projects.theforeman.org/issues/29970))
 
@@ -156,6 +160,7 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 * Make ordering by id possible for more models ([#33842](https://projects.theforeman.org/issues/33842))
 
 #### Foreman - Security
+* Settings defined by DSL are not properly encrypted ([#34573](https://projects.theforeman.org/issues/34573))
 * The login page exposes version of the foreman ([#33417](https://projects.theforeman.org/issues/33417))
 
 #### Foreman - Settings
@@ -163,7 +168,7 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
  ([#34323](https://projects.theforeman.org/issues/34323))
 * Speed up settings index page ([#33935](https://projects.theforeman.org/issues/33935))
 * drop fix_db_cache setting ([#33906](https://projects.theforeman.org/issues/33906))
-* Deprecate other than DSL setting definitions ([#33781](https://projects.theforeman.org/issues/33781))
+* Deprecate old setting definitions without \`default_settings\` ([#33781](https://projects.theforeman.org/issues/33781))
 
 #### Foreman - Smart Proxy
 * Drop require_ssl_smart_proxies setting ([#34236](https://projects.theforeman.org/issues/34236))
@@ -174,6 +179,8 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
  ([#34062](https://projects.theforeman.org/issues/34062))
 
 #### Foreman - Templates
+* Ensure that the insights snippet is being called by honoring the value of host_registration_insights parameter ([#34525](https://projects.theforeman.org/issues/34525))
+* Allow puppet setup to be skipped even if you set a puppet master ([#34388](https://projects.theforeman.org/issues/34388))
 * Update examples for truthy? and falsy? macros ([#34365](https://projects.theforeman.org/issues/34365))
 * Associate redhat templates with CentOS_Stream OS name ([#34302](https://projects.theforeman.org/issues/34302))
 * upgrade fails during db:seed with ActiveRecord::RecordNotDestroyed: Failed to destroy the record ([#34299](https://projects.theforeman.org/issues/34299))
@@ -271,6 +278,6 @@ Note that this support statement refers to running Foreman and Foreman Proxy the
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
+Adam Cécile, Adam Ruzicka, Adi Abramovich, Alexander Olofsson, Amir Fefer, Amit Upadhye, Andrew Teixeira, Anna Vitova, Antoine Beaupré, Avi Sharvit, Bastian Schmidt, Ben Tucci, Bernhard Suttner, Chris Roberts, Daniel Henninger, Dominik Matoulek, Eric D. Helms, Erik Berg, Evgeni Golov, Ewoud Kohl van Wijngaarden, Gordon Bleux, Jan Matusz, Jason, Jeremy Lenz, John Mitsch, Jonathon Turel, Justin Sherrill, Leos Stejskal, Lukáš Zapletal, Marek Hulán, Maria Agaphontzev, Melanie Corr, Nadja Heitmann, Nagoor Shaik, Oleh Fedorenko, Oliver Freyermuth, Ondřej Ezr, Ondřej Pražák, Patrick Creech, Rahul Bajaj, Romuald Conty, Ron Lavi, Sayan Das, Shimon Shtein, Shira Maximov, Stejskal Leos, Tim Meusel, Tomer Brisker, Trent Anderson, William Clark, Yifat Makias, adewar, rbertol
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
