--- a/_includes/manuals/3.0/3.3.3_debian_packages.md
+++ b/_includes/manuals/3.0/3.3.3_debian_packages.md
@@ -100,4 +100,4 @@ The packages should auto-run db:migrate and db:seed if */etc/foreman/database.ym
 
 #### Upgrade
 
-See [upgrade instructions](manuals/{{page.version}}/index.html#3.6Upgrade)
+See [upgrade instructions](manuals/{{page.version}}/index.html#3.6Upgradeto{{page.version}})
