--- a/_includes/manuals/3.0/3.3.1_rpm_packages.md
+++ b/_includes/manuals/3.0/3.3.1_rpm_packages.md
@@ -93,4 +93,4 @@ Install foreman and other foreman-* packages to add functionality:
 
 ### Upgrade
 
-See [upgrade instructions](manuals/{{page.version}}/index.html#3.6Upgrade)
+See [upgrade instructions](manuals/{{page.version}}/index.html#3.6Upgradeto{{page.version}})
