Add autocompletion to headline features

--- a/_includes/manuals/3.3/1.2_release_notes.md
+++ b/_includes/manuals/3.3/1.2_release_notes.md
@@ -4,6 +4,20 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### DSL Autocompletion in templates
+
+The template editor now has embedded DSL documentation
+(https://yourforeman/templates_doc) as an auto-completion feature that is similar to
+modern text editors or IDEs. It allows users to list all available macros whilst
+writing a new or changing an existing template. An item in the list shows the
+signature of the macro, its description and examples of how to use it. Each item
+can be selected to be filled automatically in the template's body by pressing
+`Enter` key. The list can be shown by pressing `Ctrl + Space` keys. There is
+also `Live Autocompletion` checkbox to examine the list whilst typing.
+
+Autocompletion is disabled by default and can be enabled in the
+editor by checking `Autocompletion` checkbox.
+
 ### Upgrade warnings
 
 #### Disabling unattended mode dropped
