--- a/_includes/manuals/3.1/1.2_release_notes.md
+++ b/_includes/manuals/3.1/1.2_release_notes.md
@@ -61,6 +61,39 @@ Existing installations should start thinking about a migration plan.
 
 Note that this support statement refers to running Foreman and Foreman Proxy themselves on EL7. Managing EL7 hosts remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
+### Release notes for 3.1.3
+#### Foreman - Host registration
+* The registration database migration could fail when template is not available ([#34661](https://projects.theforeman.org/issues/34661))
+
+#### Foreman - Inventory
+* The Submit button on a host form redirects to an invalid page ([#34572](https://projects.theforeman.org/issues/34572))
+
+#### Foreman - JavaScript stack
+* Adding the host parameters clears the values of the prior line ([#34747](https://projects.theforeman.org/issues/34747))
+
+#### Foreman - Security
+* Settings defined by DSL are not properly encrypted ([#34573](https://projects.theforeman.org/issues/34573))
+
+#### Foreman - Templates
+* Ensure that the insights snippet is being called by honoring the value of host_registration_insights parameter ([#34525](https://projects.theforeman.org/issues/34525))
+
+#### Foreman - Web Interface
+* Add pagelet mountpoints for hosts list table ([#34543](https://projects.theforeman.org/issues/34543))
+
+#### Installer
+* Installer does not restart foreman.service when changing Puma configuration ([#34824](https://projects.theforeman.org/issues/34824))
+
+#### Packaging - Debian/Ubuntu
+* Updates oauth Gem installed by puppet-agent-oauth under Debian to a newer version (0.5.1 produces lots of warnings about URI.escape) ([#34681](https://projects.theforeman.org/issues/34681))
+
+#### SELinux - Plugins
+* Syncing the git templates on RHEL8 raise SElinux errors ([#34726](https://projects.theforeman.org/issues/34726))
+
+#### Smart Proxy
+* Set the MALLOC_ARENA_MAX variable to counter memory bloating in production environments ([#34624](https://projects.theforeman.org/issues/34624))
+
+*A full list of changes in 3.1.3 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1572)*
+
 ### Release notes for 3.1.2
 #### Foreman - API
 * Change example for --order ([#34381](https://projects.theforeman.org/issues/34381))
