--- a/_includes/manuals/3.2/1.2_release_notes.md
+++ b/_includes/manuals/3.2/1.2_release_notes.md
@@ -31,6 +31,37 @@ Now that Debian 11 is supported, Debian 10 support is deprecated and will be dro
 
 Note that this support statement refers to running Foreman and Foreman Proxy themselves on Debian 10. Managing Debian 10 hosts remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
+### Release notes for 3.2.1
+#### Foreman - Host registration
+* The registration database migration could fail when the template is not available ([#34661](https://projects.theforeman.org/issues/34661))
+
+#### Foreman - JavaScript stack
+* Adding the host parameters clears the values of the prior line ([#34747](https://projects.theforeman.org/issues/34747))
+
+#### Foreman - Reporting
+* Remove reports deprecation from develop and 3.2 ([#34744](https://projects.theforeman.org/issues/34744))
+* Prepare Foreman core for Host Reports migration ([#34360](https://projects.theforeman.org/issues/34360))
+
+#### Foreman - TFTP
+* Make the operatingsystem.bootfile usable in Jail ([#34689](https://projects.theforeman.org/issues/34689))
+
+#### Foreman - Web Interface
+* Breadcrumb switcher doesn't work with Katello content ([#34495](https://projects.theforeman.org/issues/34495))
+
+#### Installer
+* Installer does not restart foreman.service when changing Puma configuration ([#34824](https://projects.theforeman.org/issues/34824))
+
+#### Packaging - Debian/Ubuntu
+* Updates oauth Gem installed by puppet-agent-oauth under Debian to a newer version (0.5.1 produces lots of warnings about URI.escape) ([#34681](https://projects.theforeman.org/issues/34681))
+
+#### SELinux - Plugins
+* Syncing the git templates on RHEL8 raise SElinux errors ([#34726](https://projects.theforeman.org/issues/34726))
+
+#### Smart Proxy
+* Set the MALLOC_ARENA_MAX variable to counter memory bloating in production environments ([#34624](https://projects.theforeman.org/issues/34624))
+
+*A full list of changes in 3.2.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1565)*
+
 ### Release notes for 3.2.0
 #### Foreman
 * Add Safemode jail definition for ActiveSupport::TimeWithZone ([#34571](https://projects.theforeman.org/issues/34571))
